<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        android:id="@+id/passwordRequirementsLayout"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/tvLength"
            android:text="@string/password_8_digits"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvUppercase"
            android:text="@string/password_capital_letter"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDigit"
            android:text="@string/password_8_digits"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:background="@drawable/bg_rounded_light_gray"
        android:text="@string/log_in"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnRegister"
        android:background="@drawable/bg_rounded_light_gray"
        android:text="@string/register"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnGuest"
        android:text="@string/guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textColor="?attr/text_dark"
        android:layout_marginTop="24dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
