...
            android:textSize="18sp"
            android:textColor="?attr/text_light"
            android:gravity="center"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints=""
            android:background="@drawable/bg_edittext_rounded"
            android:hint="@string/Login"
...
