...
    <string name="total_points_value">Łączna liczba punktów: %1$s</string>
    <string name="highest_score_value">Najlepszy wynik: %1$s</string>
    <string name="login_text_profile">Zaloguj się, żeby zobaczyć profil użytkownika</string>
    <string name="login_text_statistics">Zaloguj się, żeby zobaczyć statystyki użytkownika</string>
    <string name="login_button_text">ZALOGUJ SIĘ!</string>
    <string name="login_empty_error">Login nie może być pusty</string>
    <string name="login_validation">Nieprawidłowy e-mail lub hasło</string>
    <string name="give_your_username">Podaj swój login</string>
    <string name="username">login</string>
    <string name="delete_account_popup">Czy na pewno chcesz usunąć swoje konto?</string>
    <string name="delete_account">Usuń konto</string>
    <string name="tempo_display">%1$s  %2$.1f s</string>
    <string name="blue_container">Niebieska strefa dotyku</string>
...
